--- a/the_heap/components/x_stepper.cfg
+++ b/the_heap/components/x_stepper.cfg
@@ -11,9 +11,9 @@ dir_pin: !P2.6
 enable_pin: !P2.1
 rotation_distance: 40
 microsteps: 16
-endstop_pin:  !P1.29
+endstop_pin:  P1.29
 position_endstop: 0
-position_max: 245 # We added 10 mm ontop of the 235 for proper screw_tilt_adjust
+position_max: 235 # We added 10 mm ontop of the 235 for proper screw_tilt_adjust
 homing_retract_dist: 0
 homing_speed: 20
 
