--- a/the_heap/components/y_stepper.cfg
+++ b/the_heap/components/y_stepper.cfg
@@ -10,7 +10,7 @@ dir_pin: !P0.20
 enable_pin: !P2.8
 rotation_distance: 40
 microsteps: 16
-endstop_pin: !P1.28
+endstop_pin: P1.28
 position_endstop: 0
 position_max: 235
 homing_retract_dist: 0
