the state of the heap

--- a/the_heap/components/macros.cfg
+++ b/the_heap/components/macros.cfg
@@ -68,7 +68,9 @@ gcode:
     # Home the printer
     G28
     # Load Mesh Bed Level
-    G29
+    #G29
+    BED_MESH_CALIBRATE
+
     # Start bed heating
     M117 Heating bed
     M140 S{BED_TEMP}
