--- a/the_heap/components/x_stepper.cfg
+++ b/the_heap/components/x_stepper.cfg
@@ -1,9 +1,7 @@
 
 #####################################################################
-# 	X/Y Stepper Settings
+# 	X Stepper Settings
 #####################################################################
-
-
 
 [stepper_x]
 step_pin: P2.2
@@ -13,8 +11,8 @@ rotation_distance: 40
 microsteps: 16
 endstop_pin:  P1.29
 position_endstop: 0
-position_max: 235 # We added 10 mm ontop of the 235 for proper screw_tilt_adjust
-homing_retract_dist: 0
+position_max: 260 
+homing_retract_dist: 5
 homing_speed: 20
 
 [tmc2208 stepper_x]
@@ -22,6 +20,7 @@ uart_pin: P1.10
 interpolate: True
 run_current: 0.580
 hold_current: 0.290
-stealthchop_threshold: 250
+#stealthchop_threshold: 250
+stealthchop_threshold: 999999
 
 
