--- a/the_heap/components/z_stepper.cfg
+++ b/the_heap/components/z_stepper.cfg
@@ -7,12 +7,12 @@
 [bltouch]
 sensor_pin: ^P0.10
 control_pin: P2.0
-x_offset: -43
-y_offset: -15
-z_offset: 2.790
+x_offset: -43.65
+y_offset: -10.00
+z_offset: 3.078
 set_output_mode: 5V
 samples: 2
-sample_retract_dist: 10
+sample_retract_dist: 3 
 samples_tolerance_retries: 1
 
 
@@ -32,6 +32,5 @@ uart_pin: P1.8
 interpolate: True
 run_current: 0.580
 hold_current: 0.290
-stealthchop_threshold: 250
-
-
+#stealthchop_threshold: 250
+stealthchop_threshold: 999999
