--- a/the_heap/components/bed_heater.cfg
+++ b/the_heap/components/bed_heater.cfg
@@ -6,9 +6,12 @@
 heater_pin: P2.5
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: P0.25
-control: pid # tuned for 80 degrees C
-pid_kp: 71.063
-pid_ki: 1.674
-pid_kd: 754.158
+
 min_temp: 0
-max_temp: 130
+max_temp: 110
+
+control: pid 
+# Run at 60C
+pid_kp: 67.411
+pid_ki: 1.696
+pid_kd: 669.897
