--- a/the_heap/components/extruder.cfg
+++ b/the_heap/components/extruder.cfg
@@ -7,21 +7,23 @@
 step_pin: P2.13
 dir_pin: !P0.11
 enable_pin: !P2.12
-rotation_distance: 22.95
+rotation_distance: 23.45
 microsteps: 16
-gear_ratio: 3:1
+gear_ratio: 1:1
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: P2.7
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: P0.24
-control: pid # tuned for 220 degrees C
-pid_kp: 28.541
-pid_ki: 1.746
-pid_kd: 116.662
 min_temp: 0
 max_temp: 280
-max_extrude_only_distance: 600
+max_extrude_only_distance: 100
+
+control: pid 
+# tuned for 210 C
+pid_kp: 26.851
+pid_ki: 1.790
+pid_kd: 100.691
 
 [tmc2208 extruder]
 uart_pin: P1.4
