--- a/the_heap/components/y_stepper.cfg
+++ b/the_heap/components/y_stepper.cfg
@@ -13,7 +13,7 @@ microsteps: 16
 endstop_pin: P1.28
 position_endstop: 0
 position_max: 235
-homing_retract_dist: 0
+homing_retract_dist: 5 
 homing_speed: 20
 
 [tmc2208 stepper_y]
@@ -21,7 +21,5 @@ uart_pin: P1.9
 interpolate: True
 run_current: 0.580
 hold_current: 0.290
-stealthchop_threshold: 250
-
-
-
+#stealthchop_threshold: 250
+stealthchop_threshold: 999999
