Only keep the heap

--- a/components/macros.cfg
+++ b/components/macros.cfg
@@ -3,60 +3,161 @@
 # 	Macros
 #####################################################################
 
-[gcode_macro G32]
-gcode:
-    BED_MESH_CLEAR
-    G28
-    QUAD_GANTRY_LEVEL
-    G28
-    #--------------------------------------------------------------------
-    ##	for 350mm build
-    G0 X175 Y175 Z30 F3600
-    #--------------------------------------------------------------------
-  
-[gcode_macro PRINT_START]
-#   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
-gcode:
-    G32                            ; home all axes
-    G1 Z20 F3000                   ; move nozzle away from bed
-  
 
-[gcode_macro PRINT_END]
-#   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
+# See the sample-lcd.cfg file for definitions of common LCD displays.
+[gcode_macro G29]
 gcode:
-    M400                           ; wait for buffer to clear
-    G92 E0                         ; zero the extruder
-    G1 E-10.0 F3600                ; retract filament
-    G91                            ; relative positioning
-    G0 Z1.00 X20.0 Y20.0 F20000    ; move nozzle to remove stringing
+    BED_MESH_PROFILE load=default
+
+[gcode_macro PAUSE_MACRO]
+gcode:
+    {% set X = params.X|default(220) %}
+    {% set Y = params.Y|default(220) %}
+    {% set Z = params.Z|default(10) %}
+    {% set E = params.E|default(1) %}
+    SAVE_GCODE_STATE NAME=PAUSE_state
+    PAUSE
+    G91
+    G1 E-{E} F2100
+    G1 Z{Z}
+    G90
+    G1 X{X} Y{Y} F6000
+
+[gcode_macro RESUME_MACRO]
+gcode:
+    {% set E = params.E|default(1) %}
+    G91
+    G1 E{E} F2100
+    G90
+    RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
+    RESUME
+
+[gcode_macro CANCEL_PRINT_MACRO]
+gcode:
     TURN_OFF_HEATERS
-    M107                           ; turn off fan
-    G1 Z2 F3000                    ; move nozzle up 2mm
-    G90                            ; absolute positioning
-    G0  X125 Y250 F3600            ; park nozzle at rear
-    BED_MESH_CLEAR
-   
-## 	Thermistor Types
-##   "EPCOS 100K B57560G104F"
-##   "ATC Semitec 104GT-2"
-##   "NTC 100K beta 3950"
-##   "Honeywell 100K 135-104LAG-J01"
-##   "NTC 100K MGB18-104F39050L32" (Keenovo Heater Pad)
-##   "AD595"
-##   "PT100 INA826"
+    CLEAR_PAUSE
+    SDCARD_RESET_FILE
+    CANCEL_PRINT
 
-#*# <---------------------- SAVE_CONFIG ---------------------->
-#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [heater_bed]
-#*# control = pid
-#*# pid_kp = 40.432
-#*# pid_ki = 1.389
-#*# pid_kd = 294.140
-#*#
-#*# [extruder]
-#*# control = pid
-#*# pid_kp = 27.547
-#*# pid_ki = 1.391
-#*# pid_kd = 136.355
+[gcode_macro PART_COOLING_FAN_ON]
+gcode:
+    M106 S255
+
+[gcode_macro PART_COOLING_FAN_OFF]
+gcode:
+    M106 S0
+
+# Do nozzle priming
+[gcode_macro PRIME_EXTRUDER]
+gcode:
+    M117 Priming
+    G92 E0
+    G1 X10.1 Y20 Z2.0 F2000
+    G1 X10.1 Y200 Z0.28 F2000.0 E15; Draw the first line
+    G1 X10.4 Y200 Z0.28 F5000.0; Move to the side a little
+    G1 X10.4 Y20.0 Z0.28 F2000.0 E30; Draw the second line
+    G92 E0 
+    G1 F2400 E-0.7 # Small retract to remove pressure
+    G1 Z2.0 F3000 ;Move Z Axis up
+
+[gcode_macro START_PRINT]
+gcode:
+    {% set BED_TEMP = params.BED_TEMP|default(60) %}
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200) %}
+    
+    # Home the printer
+    G28
+    # Load Mesh Bed Level
+    #G29
+    BED_MESH_CALIBRATE
+
+    # Start bed heating
+    M117 Heating bed
+    M140 S{BED_TEMP}
+    # Use absolute coordinates
+    G90
+    # Reset the G-Code Z offset (adjust Z offset if needed)
+    SET_GCODE_OFFSET Z=0.0
+    # Move the nozzle near the bed
+    G1 Z5 F3000
+    # Move the nozzle very close to the bed
+    G1 Z0.15 F300
+    # Wait for bed to reach temperature
+    M190 S{BED_TEMP}
+    # Start nozzle heating
+    M117 Heating nozzle
+    M104 S{EXTRUDER_TEMP}
+    # Set and wait for nozzle to reach temperature
+    M109 S{EXTRUDER_TEMP}
+    # Prime line
+    PRIME_EXTRUDER
+    M117 Printing
+
+[gcode_macro END_PRINT]
+gcode:
+    # Move nozzle away from print while retracting
+    G91
+    # Raise nozzle and retract
+    G1 E-2 F1800
+    G1 Z5 F3000
+    # Move to absolute position
+    G90
+    G1 X10 Y200 F2000
+    # Turn off bed, extruder, and fan
+    M140 S0
+    M104 S0
+    M106 S0
+    # Disable steppers
+    M84
+    M117 Print complete
+
+[gcode_macro LOAD_FILAMENT]
+gcode:
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200) %}
+    {% set BOWDEN_TUBE_LENGTH = params.BOWDEN_TUBE_LENGTH|default(600) %}
+    # Let the printer know you are following this point with metric values
+    G21
+    # Let the printer know you are using absolute positioning
+    G90
+    # Start nozzle heating
+    M117 Heating nozzle
+    M104 S{EXTRUDER_TEMP}
+    # Set and wait for nozzle to reach temperature
+    M109 S{EXTRUDER_TEMP}
+    # Reset the position of the extruder
+    G92 E0
+    # Feed BOWDEN_TUBE_LENGTH mm of filament at 2000 mm/minute speed.
+    G1 E{BOWDEN_TUBE_LENGTH} F2000 
+    # Reset the position of the extruder
+    G92 E0
+
+[gcode_macro UNLOAD_FILAMENT]
+gcode:
+    {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(200) %}
+    {% set BOWDEN_TUBE_LENGTH = params.BOWDEN_TUBE_LENGTH|default(700) %}
+    # Let the printer know you are following this point with metric values
+    G21
+    # Let the printer know you are using absolute positioning
+    G90
+    # Start nozzle heating
+    M117 Heating nozzle
+    M104 S{EXTRUDER_TEMP}
+    # Set and wait for nozzle to reach temperature
+    M109 S{EXTRUDER_TEMP}
+    # Reset the position of the extruder
+    G92 E0
+    # Extrude a short distance before unloading to avoid blob forming
+    G1 E10 F100
+    # Reset the position of the extruder
+    G92 E0
+    # Retract BOWDEN_TUBE_LENGTH mm of filament at 2000 mm/minute speed.
+    G1 E-700 F2000
+    # Reset the position of the extruder
+    G92 E0
+    # Display message on LCD-display to remove the filament
+    M117 Remove filament
+
+
+
+
 
