--- a/components/bed_heater.cfg
+++ b/components/bed_heater.cfg
@@ -3,16 +3,15 @@
 #####################################################################
 
 [heater_bed]
-##	SSR Pin - BED_OUT
-heater_pin: PA3
-sensor_type: NTC 100K beta 3950
-sensor_pin: PF3
-##	Adjust Max Power so your heater doesn't warp your bed
-max_power: 0.6
-min_temp: 0
-max_temp: 120
-control: pid
-pid_kp: 40.432
-pid_ki: 1.391
-pid_kd: 136.355
+heater_pin: P2.5
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: P0.25
 
+min_temp: 0
+max_temp: 110
+
+control: pid 
+# Run at 60C
+pid_kp: 67.411
+pid_ki: 1.696
+pid_kd: 669.897
