--- a/components/extruder.cfg
+++ b/components/extruder.cfg
@@ -3,49 +3,32 @@
 # 	Extruder
 #####################################################################
 
-#	E0 on MOTOR6
 [extruder]
-step_pin: PE2
-dir_pin: PE3
-enable_pin: !PD4
-##	Update value below when you perform extruder calibration
-##	If you ask for 100mm of filament, but in reality it is 98mm:
-##	rotation_distance = <previous_rotation_distance> * <actual_extrude_distance> / 100
-##  22.6789511 is a good starting point
-rotation_distance: 22.6789511	#Bondtech 5mm Drive Gears
-##	Update Gear Ratio depending on your Extruder Type
-##	Use 50:17 for Afterburner/Clockwork (BMG Gear Ratio)
-##	Use 80:20 for M4, M3.1
-gear_ratio: 50:17				#BMG Gear Ratio
+step_pin: P2.13
+dir_pin: !P0.11
+enable_pin: !P2.12
+rotation_distance: 23.45
 microsteps: 16
-full_steps_per_rotation: 200	#200 for 1.8 degree, 400 for 0.9 degree
+gear_ratio: 1:1
 nozzle_diameter: 0.400
-filament_diameter: 1.75
-heater_pin: PA2
+filament_diameter: 1.750
+heater_pin: P2.7
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: P0.24
+min_temp: 0
+max_temp: 280
+max_extrude_only_distance: 100
 
-sensor_type: ATC Semitec 104GT-2
-sensor_pin: PF4
-min_temp: 10
-max_temp: 270
-max_power: 1.0
-min_extrude_temp: 170
+control: pid 
+# tuned for 210 C
+pid_kp: 26.851
+pid_ki: 1.790
+pid_kd: 100.691
 
-control = pid
-pid_kp = 27.547
-pid_ki = 1.391
-pid_kd = 136.355
-
-##	Try to keep pressure_advance below 1.0
-pressure_advance: 0.05
-##	Default is 0.040, leave stock
-pressure_advance_smooth_time: 0.040
-
-[tmc2209 extruder]
-uart_pin: PE1
-interpolate: false
-run_current: 0.5
-hold_current: 0.4
-sense_resistor: 0.110
-stealthchop_threshold: 0
+[tmc2208 extruder]
+uart_pin: P1.4
+interpolate: True
+run_current: 0.660
+hold_current: 0.330
 
 
