setting up moonraker

--- a/components/fans.cfg
+++ b/components/fans.cfg
@@ -3,6 +3,7 @@
 # 	Fan Control
 #####################################################################
 
+## Print cooling fan
 [fan]
 pin: P2.3
 hardware_pwm: false
