--- a/printer.cfg
+++ b/printer.cfg
@@ -15,6 +15,9 @@ square_corner_velocity: 5.0
 
 [include components/*.cfg]
 
+
+[include mainsail.cfg]
+
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
