--- a/components/probe_and_homing.cfg
+++ b/components/probe_and_homing.cfg
@@ -6,7 +6,8 @@
 timeout: 1800
 
 [safe_z_home]
-home_xy_position: 117.5,117.5
+# Bed center with added bl touch offset
+home_xy_position: 151.15,127.5
 z_hop: 10 # Move up
 z_hop_speed: 5
 
